--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.uri: ${MONGODB_URL}
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
 server.error.include-message=always
 
-spring.config.import=classpath:costs.properties
+spring.config.import="classpath:costs.properties"
 
 management.endpoints.enabled-by-default=false
 management.endpoints.web.base-path=/
